<resources>
    <string name="app_name">Module 2.2 BT5</string>
    <string name="qu_n_l_nh_n_vi_n">Quản lý nhân viên</string>
    <string name="m_nv">Mã NV:</string>
    <string name="lo_i_nv">Loại NV:</string>
    <string name="t_n_nv">Tên NV:</string>
    <string name="nh_p_nv">Nhập NV</string>
    <string name="ch_nh_th_c">Chính thức</string>
    <string name="th_i_v">Thời vụ</string>
    <string name="vui_l_ng_nh_p_th_ng_tin">Vui lòng nhập thông tin</string>
    <string name="vui_l_ng_nh_p_th_ng_tin1">Vui lòng nhập thông tin</string>
</resources>